Updated defaultCenter to Los Angeles

--- a/templates/form.html
+++ b/templates/form.html
@@ -24,7 +24,7 @@
         // Function to initialize Google Maps
         function initMap() {
             // Initialize with default coordinates
-            const defaultCenter = { lat: 32.8049, lng: -117.0259 };
+            const defaultCenter = { lat: 34.054825252573075, lng: -118.24331830957996 };
 
             // Create the map object
             map = new google.maps.Map(document.getElementById('map'), {
